# RS_ML_infrastructure

./: .gitignore  README.md  config.json  noxfile.py  pyproject.toml
.github/workflows/: test_lint.yml
src/forest_ml/: data.py  eda.py  model.py  pipeline.py  predict.py  train.py
tests/: test_helper.py  test_train.py
