[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "Final project for ML course of RS school"
authors = ["Uladzislau Sakalou"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
train = "forest_ml.train:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
