[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "Final project for ML course of RS school"
authors = ["Uladzislau Sakalou"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
train = "forest_ml.train:train"
eda = "forest_ml.eda:eda"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
pandas = "^1.4.2"
scikit-learn = "^1.0.2"
joblib = "^1.1.0"
mlflow = "^1.25.1"
Boruta = "^0.3"
numpy = "^1.22.3"
pandas-profiling = "^3.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.950"
black = "^22.3.0"
pytest = "^7.1.2"
Faker = "^13.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "sklearn.*",
    "boruta.*",
    "joblib.*",
    "mlflow.*",
    "faker.*",
    "numpy.*",
    "click.*",
    "pytest.*",
    "nox.*",
    "pandas_profiling.*"
]
ignore_missing_imports = true
